gccida/g2/loop_iv_add_mult_sink
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iv_add_mult_sink/src/loop.c:8191:45: error: use of undeclared identifier 'machine_mode'
v9 = expand_mult_add( v8, reg, mult, add, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 1); 
                                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iv_add_mult_sink/src/obj/loop.o] Error 1
